removed nav links

--- a/index.html
+++ b/index.html
@@ -6,13 +6,9 @@ layout: default
 
 <!-- <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" alt="{{ site.title }}" /></a> -->
 
-<div class="margin-top-large paper border border-dotted" style="float: none;">
-  <h1 class="site-name text-center"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+<div class="margin-top-large paper border border-4" style="float: none;">
+  <h1 class="site-name text-center"><a href="{{ site.baseurl }}/" style="background-image: none;">{{ site.name }}</a></h1>
   <p class="site-description text-center">{{ site.description }}</p>
-  
-  <div class="progress margin-bottom">
-    <div class="bar w-0" style="height: 0rem;"></div>
-  </div>
 
     <ul class="inline padding-none text-center">
       <li><a href="{{ site.baseurl }}/archive">Archive</a></li>
