--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@ layout: default
 
 <!-- <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" alt="{{ site.title }}" /></a> -->
 
-<div class="margin-top-large paper border border-4" style="float: none;">
-  <h2 class="site-name text-center"><a href="{{ site.baseurl }}/" style="background-image: none;">{{ site.name }}</a></h2>
+<div class="margin-top-large paper border border-4"
+  style="border-bottom-left-radius: 13px 68px;border-bottom-right-radius: 72px 11px;border-top-right-radius: 11px 66px;">
+  <h2 class="site-name text-center"><a href="{{ site.baseurl }}/" style="background-image: none;">{{ site.name }}</a>
+  </h2>
   <p class="site-description text-center">{{ site.description }}</p>
 
-    <ul class="inline padding-none text-center">
-      <li><a href="{{ site.baseurl }}/archive">Archive</a></li>
-      <li><a href="{{ site.baseurl }}/categories">Categories</a></li>
-      <li><a href="{{ site.baseurl }}/search">Search</a></li>
-    </ul>
+  <ul class="inline padding-none text-center">
+    <li><a href="{{ site.baseurl }}/archive">Archive</a></li>
+    <li><a href="{{ site.baseurl }}/categories">Categories</a></li>
+    <li><a href="{{ site.baseurl }}/search">Search</a></li>
+  </ul>
 </div>
 
 
