--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <div class="margin-top-large paper border border-4"
   style="border-bottom-left-radius: 13px 68px;border-bottom-right-radius: 72px 11px;border-top-right-radius: 11px 66px;">
-  <h2 class="site-name text-center intelfont"><a href="{{ site.baseurl }}/" style="background-image: none; font-size: 1.9rem; letter-spacing: 1px; text-align: center;"><span style="color: #d22b2b;">daemons</span>inside</a>
+  <h2 class="site-name text-center"><a href="{{ site.baseurl }}/" style="background-image: none; font-size: 1.9rem; letter-spacing: 1px; text-align: center;"><span style="color: #d22b2b;">daemons</span>inside</a>
   </h2>
   <p class="site-description text-center">{{ site.description }}</p>
 
