fixed index.html class and style for author card

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@ layout: default
 
 <!-- <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" alt="{{ site.title }}" /></a> -->
 
-<div class="margin-top-large paper border border-4"
-  style="border-bottom-left-radius: 13px 68px;border-bottom-right-radius: 72px 11px;border-top-right-radius: 11px 66px;">
+<div class="margin-top-large paper border border-4" style="border-bottom-left-radius: 13px 68px;border-bottom-right-radius: 72px 11px;border-top-right-radius: 11px 66px;">
   <h2 class="site-name text-center"><a href="{{ site.baseurl }}/"
       style="background-image: none; font-size: 1.9rem; letter-spacing: 1px; text-align: center;"><span
         style="color: #d22b2b;">D</span>aemon's Disciple</a>
