fixed colors for navlinks and cardlinks

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ layout: default
   <p class="site-description text-center">{{ site.description }}</p>
 
   <ul class="inline padding-none text-center">
-    <li><a href="{{ site.baseurl }}/archive">Archive</a></li>
-    <li><a href="{{ site.baseurl }}/categories">Categories</a></li>
-    <li><a href="{{ site.baseurl }}/search">Search</a></li>
+    <li><a class="card-links" href="{{ site.baseurl }}/archive">Archive</a></li>
+    <li><a class="card-links" href="{{ site.baseurl }}/categories">Categories</a></li>
+    <li><a class="card-links" href="{{ site.baseurl }}/search">Search</a></li>
   </ul>
 </div>
 
